tools/tests/errors/list_concat_int.experr
can only concatenate List to List
